Add a Projection resource and support GET (with unit tests, acceptance tests, and updated doc) General clean up of cut and paste variable names.
