# routes/v1.js
@@ -8,6 +8,7 @@ const project = require('../services/v1/project');
 const demand = require('../services/v1/demand');
 const defect = require('../services/v1/defect');
 const effort = require('../services/v1/effort');
+const projection = require('../services/v1/projection');
 
 router.get('/ping', about.ping);
 router.get('/ping/deep', about.deepPing);
@@ -18,9 +19,10 @@ router.get('/project/:name', project.getProjectByName);
 router.put('/project/:name', project.updateProjectByName);
 router.post('/project/:name', project.createProjectByName);
 router.delete('/project/:name', project.deleteProjectByName);
-
 router.get('/project/:name/demand', demand.getDemandByName);
 router.get('/project/:name/defect', defect.getDefectByName);
 router.get('/project/:name/effort', effort.getEffortByName);
+router.get('/project/:name/projection', projection.getProjectionByName);
+router.put('/project/:name/projection', projection.updateProjectionByName);
 
 module.exports = router;
